[package]
name = "dash89"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
log = "0.4.26"
# nt_client = {git = "https://github.com/DatAsianBoi123/nt_client.git"}
nt_client = {path = "./nt_client/"}
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
simple-logging = "2.0.2"
tokio = "1.44.0"
toml = "0.8.20"
user_dirs = "0.2.0"
